...

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="90dp">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:contentInsetStart="120dp"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title=""
                android:title=""

...
                    android:textSize="@dimen/text_small"
                    android:gravity="center_horizontal"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/favortiesHeader"
                    android:clickable="true"
                    android:text="@string/favorites"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/text_small"
                    android:gravity="center_horizontal"
                    android:layout_weight="0.5"
...
