<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="320dp">

    <ImageView
        android:id="@+id/image"
        android:contentDescription="@string/recipeImageContentDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/recipeName"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        android:background="@drawable/circular_gradient"
        android:textColor="@color/color_text"
        android:shadowColor="@color/black"
        android:shadowRadius="5"
        android:shadowDx="6"
        android:shadowDy="6"
        android:layout_alignTop="@id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ImageButton
        android:id="@+id/favBtn"
        android:contentDescription="@string/favorite"
        android:layout_marginStart="10dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:src="@drawable/likebtn"
        android:background="@null"
        android:layout_margin="5dp"
        android:layout_alignBottom="@id/image"
        android:layout_alignStart="@id/image"
        android:scaleType="fitCenter"
        android:layout_width="30dp"
        android:layout_height="30dp"/>

    <ImageView
        android:id="@+id/recipeRating"
        android:contentDescription="@string/rating"
        android:layout_marginBottom="5dp"
        android:focusable="false"
        android:layout_alignBottom="@id/image"
        android:layout_margin="5dp"
        android:layout_alignEnd="@id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</RelativeLayout>