...
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.se491.chef_ly.activity.IntroActivity">


    <Button
        android:id="@+id/skipBtn"
        android:text="@string/skip"
        android:background="@null"
        android:textColor="@color/white"
        android:textSize="@dimen/text_small"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
...
